# storm

./: .gitignore  ARCHITECTURE.md  BUILT_WITH.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/optimization/: bench-render-internal.ts
docs/: animations.md  components.md  demo.tape  devtools.md  getting-started.md  hook-guide.md  hooks.md  i18n.md  performance.md  pitfalls.md  plugins.md  recipes.md  showpiece-dark.tape  showpiece-light.tape  testing.md  theming.md  widgets.md
docs/components/: README.md  content.md  core.md  feedback.md  input.md  layout.md  navigation.md  typography.md
examples/: benchmarks-extreme.ts  benchmarks.ts  chat-v2.tsx  demo-dashboard.tsx  demo-launch.tsx  demo-polished.tsx  demo-profiler.tsx  demo-showcase.tsx  demo-storm.tsx  demo.tape  demo.tsx  devtools-demo.tsx  launch.mjs  run-showcase.ts  showcase.tsx  showpiece-v2.tsx  showpiece.tsx  storm-website.tsx  test-streaming.tsx
examples/debug/: absolute-natural.tsx  absolute.tsx  capture-scrollview.tsx  flex-shrink.tsx  noop.tsx  overflow.tsx  overlay.tsx  reorder.tsx  resize.tsx  scroll.tsx  scrollview-width.tsx  wide-char-diff.tsx  wide-char.tsx
examples/storm-agent/: App.tsx  index.tsx
examples/storm-code-alt/: App.tsx  index.tsx  (+1 more)
playground/: package-lock.json  package.json  server.mjs
src/: index.ts  jsx.d.ts  storm-jsx.d.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
(+545 files in other folders)
